compose/clamavd-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: clamavd
  name: clamavd
spec:
  ports:
    - name: "62006"
      port: 62006
      targetPort: 3310
  selector:
    io.kompose.service: clamavd
status:
  loadBalancer: {}
