compose/gearmand-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: gearmand
  name: gearmand
spec:
  ports:
    - name: "62004"
      port: 62004
      targetPort: 4730
  selector:
    io.kompose.service: gearmand
status:
  loadBalancer: {}
