compose/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  ports:
    - name: "62080"
      port: 62080
      targetPort: 80
    - name: "62081"
      port: 62081
      targetPort: 8000
  selector:
    io.kompose.service: nginx
status:
  loadBalancer: {}
